# 2526-unibe-music-player

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/modules/: Music.py  MusicDatabase.py  MusicPlayer.py
test/: test_Music.py  test_MusicDatabase.py  test_MusicPlayer.py
