[project]
name = "2526-unibe-music-player"
version = "0.1.0"
description = "Advanced Python course project: Music Player"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
